2/4/11 game settings model, candidate for phetcommon
2/4/11 constrained properties, candidates for phetcommon
2/4/11 add strings for Game to English strings file
2/4/11 display "molecules are hidden" in Boxes when molecules are hidden
# 0.00.04 (48661) Feb 4, 2011
2/4/11 dev version with change requests and fixes
2/4/11 fix #2715, JSpinners cause ClassCastException, rewrote parts of EquationNode
2/4/11 workaround for #2710, change background color of all PSwing(JComponent) when canvas color changes
2/4/11 change request: move equation radio buttons to upper right
2/4/11 change request: move Reset All button to lower right
2/4/11 remove Reset All button from Game tab
# 0.00.03 (48621) Feb 4, 2011
2/4/11 dev version with team change requests for 1st tab
2/3/11 make balance scales light up when equation is balanced
2/3/11 convert not-equals sign to a strokable path
2/3/11 convert "=" sign to a strokable path so that it can "light up" without disappearing on a light-colored background
2/3/11 add colors for Cl,F,P
2/3/11 add "Under Construction" notice to Game tab
2/3/11 change request: make arrows and "=" light up when equation is balanced
2/3/11 change request: use a lighter color for the boxes
2/3/11 add developer controls for setting play area and box colors
2/3/11 encapsulation of global properties
2/3/11 change request: move view radio buttons to bottom of play area
2/3/11 change request: delete smiley face from 1st tab
2/3/11 change request: set default view to "None"
2/3/11 change request: hide zero-height bar in bar charts view
2/3/11 change request: add atom icons to bar charts view
2/3/11 change request: increase size of atom symbol in bar charts view
# 0.00.02 (48563) Feb 2, 2011
2/2/11 dev version for team discussion, all features implemented in 1st tab
2/2/11 replace atom and molecule image files with Piccolo code
2/2/11 make Reset All in any tab perform a reset of global settings (eg, Options->Show molecules)