@@ -1,3 +1,4 @@
+2/4/11 change order of radio buttons to None, Balance Scales, Bar Charts
 2/4/11 game settings model, candidate for phetcommon
 2/4/11 constrained properties, candidates for phetcommon
 2/4/11 add strings for Game to English strings file
